objects/Communication__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>RE_Date_Changed__c</fullName>
        <label>RE Date Changed</label>
        <type>Date</type>
    </fields><fields>
        <fullName>RE_Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RE Do Not Contact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>RE_ID__c</fullName>
        <label>RE ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RE Inactive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>RE_Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RE Is Primary</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>false</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>false</enableSharing><enableStreamingApi>false</enableStreamingApi><label>Communication</label><nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Communication Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Communications</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>